image layout issue fixed

--- a/TinDog-Start-master-2/css/styles.css
+++ b/TinDog-Start-master-2/css/styles.css
@@ -2,18 +2,79 @@
 ** font-family: 'Montserrat', sans-serif;
 ** font-family: 'Ubuntu', sans-serif; */
 
+body {
+	font-family: 'Montserrat', sans-serif;
+}
+
 #title {
 	background-color: #ff4c68;
+	color: #fff;
+	width: auto;
+	height: auto;
 }
 
 h1 {
-	font-family: 'Montserrat', sans-serif;
-	color: white;
-	font-size: 3rem;
+	font-size: 3.5rem;
+	font-weight: 900;
 	line-height: 1.5;
+
 }
 
 .container-fluid {
 	padding: 3% 15%;
 }
 
+/* Title Image */
+.title-image {
+	width: 60%;
+	transform: rotate(25deg);
+}
+
+.navbar {
+	padding-bottom: 0 0 4.5rem; /* Top:0, Left:0, Right:0, Bottom: 4.5rem */
+}
+/* Navigation bar */
+.navbar-brand {
+	font-family: 'Ubuntu', sans-serif;
+	font-size: 2.5rem;
+	font-weight: bold;
+}
+
+.nav-item {
+	padding: 0 18px;
+}
+
+.nav-link {
+	font-family: 'Montserrat', sans-serif;
+	font-size: 1.2rem;
+}
+
+#features {
+	text-align: center;
+	padding: 7% 15%;
+}
+
+/* Download Button */
+.download-button {
+	margin: 5% 3% 5% 0;
+}
+/* Background colors of the awesome icons */
+.fa-heart, .fa-bullseye, .fa-circle-check {
+	color: #ef8172;
+	text-align: center;
+	margin: 50px auto;
+	display: block;
+}
+
+.fa-solid:hover {
+	color: #ff4c68;
+}
+
+p {
+	color: grey;
+	font-size: 1.3rem;
+}
+
+h3 {
+	font-weight: 900;
+}
